# sistema-de-ponto-django

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
main_code/: db.sqlite3  manage.py
main_code/main_code/: asgi.py  settings.py  urls.py  wsgi.py
main_code/webpage/: admin.py  apps.py  models.py  urls.py  views.py
main_code/webpage/migrations/: 0001_initial.py  0002_delete_teste.py  0002_rename_employeeinfo_funcionariosinformaçoes.py  0003_rename_funcionariosinformaçoes_funcionario.py  0003_rename_genero2_funcionario_genero_and_more.py  0004_alter_funcionario_nome.py  0004_alter_funcionario_sexo.py  0005_alter_funcionario_endereço.py  0005_alter_funcionario_sobrenome.py  0006_alter_funcionario_cpf.py  0006_checkin.py  0007_alter_checkin_entrada_manhã_and_more.py  0007_funcionario_cargo.py  0008_rename_entrada_manhã_checkin_entrada_manha_and_more.py  0008_rename_sexo_funcionario_gênero.py  0009_alter_funcionario_genero.py  0010_alter_checkin_dia_alter_checkin_entrada_manha_and_more.py  0010_alter_checkin_dia_alter_checkin_funcionario.py  0011_merge_20221022_1445.py
main_code/webpage/static/css/: style.css
main_code/webpage/templates/: about.html  colaboradores.html  employees-info.html  employees.html  funcionario-detail.html  index.html  mainpage.html
